fixed z-index on section

--- a/assets/stylesheets/_scaffolding.scss
+++ b/assets/stylesheets/_scaffolding.scss
@@ -15,6 +15,7 @@ section {
 
 section.main {
   padding: $section-padding 0;
+  z-index: -1;
 
   &:nth-of-type(even) {
     background: white;
